--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<artifactId>maven-archetype-plugin</artifactId>
+     <version>3.8.1</version>
+     <dependencies>
+     <dependency>
+          <groupId>org.apache.maven.shared</groupId>
+          <artifactId>maven-invoker</artifactId>
+          <version>3.81</version>
+     </dependency>
+     </dependencies>
 				<configuration>
 					<excludes>
 						<exclude>
